objects/Collateral__c.object
<CustomObject>
    <fields>
        <fullName>Client_Facing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Client Facing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Community_Category_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Community Category ID</label>
        <referenceTo>Community_Category__c</referenceTo>
        <relationshipLabel>collaterals</relationshipLabel>
        <relationshipName>collaterals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Display_Sequence_Nbr__c</fullName>
        <label>Display Sequence Nbr</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EXOURL__c</fullName>
        <label>ExoURL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Practice_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Practice Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SharepointURL__c</fullName>
        <label>SharepointURL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sharepoint_Document_ID__c</fullName>
        <label>Sharepoint Document ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Short_Description__c</fullName>
        <label>Short Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Text</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Link</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Video</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upload Document</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <label>Collateral</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CN-{00000000}</displayFormat>
        <label>Collateral Name ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>collaterals</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>